# wifi-rotate

./: Dockerfile  README.md  docker-compose.yml  doover_config.json  pyproject.toml  test_nmcli.py
.github/workflows/: build-image.yml  run-tests.yml
deployment/: docker-compose.yml
simulators/: app_config.json  docker-compose.yml
src/app_template/: __init__.py  app_config.py  app_state.py  app_ui.py  application.py
src/wifi_rotate/: __init__.py  app_config.py  app_tags.py  application.py
tests/: test_imports.py
